Fix issue of table overlapping bottom navigation

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -6,5 +6,9 @@
 }
 
 div.hidden {
-    display: none
+    display: none;
+}
+
+.fixed-table-body {
+    overflow: scroll;
 }
